--- a/xmega/README
+++ b/xmega/README
@@ -1,8 +1,14 @@
-Ateml AVR xmega template (avr-gcc)
+ATMEL AVR XMega template (avr-gcc)
 
 This is a basic template project for an Atmel AVR xmega microcontroller.  The
 template includes libraries for several common peripherals.  It uses the
 avr-gcc toolchain and the avrdude programmer.  
+
+For more information and updates:
+http://alexforencich.com/wiki/en/templates/xmega
+
+GitHub repository:
+https://github.com/alexforencich/templates
 
 Included Libraries:
   * Usart
