Added cross-platform serial interface code

--- a/simple-gtk/README
+++ b/simple-gtk/README
@@ -8,4 +8,7 @@ http://alexforencich.com/wiki/en/templates/simple-gtk
 GitHub repository:
 https://github.com/alexforencich/templates
 
+Included Libraries:
+  * Cross-platform serial port
+
 
